<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnRegistroPressao"
        android:text="@string/registrar_pressao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/historicoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Histórico"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnGraficos"
        android:text="@string/graficos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnLembretes"
        android:text="@string/lembretes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnSair"
        android:text="@string/sair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
