<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/valorSistolica"
            android:hint="@string/pressao_sistolica_hint"
            android:inputType="number"
            android:maxLength="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/valorDiastolica"
            android:hint="@string/pressao_diastolica_hint"
            android:inputType="number"
            android:maxLength="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/observacoes"
            android:hint="@string/observacoes_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/salvarButton"
            android:text="@string/salvar_registro_pressao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>